--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -58,22 +58,22 @@ jobs:
          https://api.github.com/repos/puncherschance/saucedemo/actions/artifacts/$REPORT_ID/zip 
          -o pages.zip
       - name: Unzip Artifacts
-        run: mkdir allure-results && unzip artifacts.zip -d allure-results
+        run: > 
+         mkdir allure-results ||true
+         &&
+         unzip artifacts.zip -d allure-results ||true
         continue-on-error: true
       - name: Unzip Pages
         run: >
-         mkdir old_pages pages_history
+         mkdir old_pages pages_history ||true
          &&
-         unzip pages.zip -d old_pages
+         unzip pages.zip -d old_pages ||true
          &&
-         tar -xvf old_pages/artifact.tar -C pages_history
-        continue-on-error: true
+         tar -xvf old_pages/artifact.tar -C pages_history ||true
       - name: Copy History
-        run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
-        continue-on-error: true
+        run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results ||true
       - name: Store Allure History
         uses: actions/upload-artifact@v4
-        continue-on-error: true
         with:
           name: allure-results
           path:
